# Framework de simulação genérico — não sabe nada de TEP, química ou qualquer
# planta específica. Só sabe de DynamicModel, composição, integração numérica
# e os blocos genéricos (atuador/sensor de 1ª ordem, distúrbio cúbico) que
# qualquer planta simulada pode reaproveitar.

[package]
name = "monjolo"
version = "0.1.0"
edition = "2021"

[lib]
name = "monjolo"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
toml = "0.8"
opcua = { package = "async-opcua", version = "0.18", features = ["server"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"], optional = true }

[features]
# Adaptador OPC-UA (opcua_adapter) — puxa async-opcua + tokio, pesados
# demais pra serem dependência default de um framework de simulação
# genérico. O resto do crate não sabe nada disso.
opcua = ["dep:opcua", "dep:tokio"]
